[package]
name = "tw3-modlist-manager"
version = "0.1.0"
authors = ["Aelto <Aelto@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.2.1"
actix-utils = "3.0.1"
actix-rt = "1.0.0"
actix-multipart = "0.4.0"

websocket = "0.26.2"

maud = { version = "0.23.0", features = ["actix-web"] }
rusqlite = { version = "0.21.0", features = ["bundled"] }
serde = "1.0.126"
serde_json = "1.0"
futures = "0.3.1"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs_io = "0.1.7"

toml = "0.5.8"
dirs = "3.0.1"
pathdiff = "0.2.0"
symlink = "0.1.0"
qstring = "0.7.2"
fs_extra = "1.2.0"